# MODBUS_PLC_MACHINE

./: README.md
PLC_IOT/: CMakeLists.txt  CMakeLists.txt.save  main.c  modbus_json.c  modbus_json.h  remote_monitoring.c  remote_monitoring.h
PLC_IOT/libmodbus-ascii-support/: CMakeLists.txt
